<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>TabletAreaSelectionWidget</class>
 <widget class="QWidget" name="TabletAreaSelectionWidget">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>599</width>
    <height>262</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QHBoxLayout" name="horizontalLayout">
   <item>
    <layout class="QVBoxLayout" name="controlsLayout">
     <item>
      <widget class="QGroupBox" name="screenGroupBox">
       <property name="title">
        <string>Screen</string>
       </property>
       <layout class="QHBoxLayout" name="horizontalLayout_2">
        <item>
         <widget class="Wacom::AreaSelectionWidget" name="screenArea" native="true"/>
        </item>
       </layout>
      </widget>
     </item>
     <item>
      <widget class="QGroupBox" name="controlsGroupBox">
       <property name="title">
        <string>Map Screen To</string>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_2">
        <item>
         <widget class="QRadioButton" name="fullTabletRadioButton">
          <property name="text">
           <string>Full Tablet</string>
          </property>
          <property name="checked">
           <bool>true</bool>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QRadioButton" name="tabletAreaRadioButton">
          <property name="text">
           <string>Tablet Area</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QPushButton" name="forceProportionsButton">
          <property name="text">
           <string>Set Screen Proportions</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QPushButton" name="calibrateButton">
          <property name="text">
           <string>Calibrate</string>
          </property>
         </widget>
        </item>
       </layout>
      </widget>
     </item>
     <item>
      <spacer name="controlsFreeSpacer">
       <property name="orientation">
        <enum>Qt::Vertical</enum>
       </property>
       <property name="sizeType">
        <enum>QSizePolicy::Expanding</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
         <width>1</width>
         <height>85</height>
        </size>
       </property>
      </spacer>
     </item>
    </layout>
   </item>
   <item>
    <widget class="QGroupBox" name="tabletGroupBox">
     <property name="title">
      <string>Tablet</string>
     </property>
     <layout class="QHBoxLayout" name="horizontalLayout_3">
      <item>
       <widget class="Wacom::AreaSelectionWidget" name="areaWidget" native="true">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>Wacom::AreaSelectionWidget</class>
   <extends>QWidget</extends>
   <header>areaselectionwidget.h</header>
   <container>1</container>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections>
  <connection>
   <sender>calibrateButton</sender>
   <signal>clicked()</signal>
   <receiver>TabletAreaSelectionWidget</receiver>
   <slot>onCalibrateClicked()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>100</x>
     <y>185</y>
    </hint>
    <hint type="destinationlabel">
     <x>199</x>
     <y>149</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>forceProportionsButton</sender>
   <signal>clicked()</signal>
   <receiver>TabletAreaSelectionWidget</receiver>
   <slot>onForceProportionsClicked()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>100</x>
     <y>160</y>
    </hint>
    <hint type="destinationlabel">
     <x>199</x>
     <y>149</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>fullTabletRadioButton</sender>
   <signal>toggled(bool)</signal>
   <receiver>TabletAreaSelectionWidget</receiver>
   <slot>onFullTabletSelected(bool)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>100</x>
     <y>110</y>
    </hint>
    <hint type="destinationlabel">
     <x>199</x>
     <y>149</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>tabletAreaRadioButton</sender>
   <signal>toggled(bool)</signal>
   <receiver>TabletAreaSelectionWidget</receiver>
   <slot>onTabletAreaSelected(bool)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>100</x>
     <y>135</y>
    </hint>
    <hint type="destinationlabel">
     <x>199</x>
     <y>149</y>
    </hint>
   </hints>
  </connection>
 </connections>
 <slots>
  <slot>onCalibrateClicked()</slot>
  <slot>onForceProportionsClicked()</slot>
  <slot>onFullTabletSelected(bool)</slot>
  <slot>onTabletAreaSelected(bool)</slot>
 </slots>
</ui>
